<resources>
    <string name="app_name">Anwesha2k20</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="default_notification_channel_id">notifications</string>
    <string name="default_notification_channel_description">All the notifications are sent through this channel.</string>
    <string name="celesta_app">https://celesta.org.in/app/</string>
    <string name="accomo_fragment">This Segment is work in progress, so text used here is irrelevant!!!     wgrwgr gwrgwrg wgrwdg grgrwgwr wrgwgwrgwr gwrgwrgrw gwrgwrgrwfwr2 t5h4th wf w4t  g34g </string>
    <string name="book">Submit</string>
    <string name="preference">Book your preference now!</string>
    <string name="login_now">Login Now</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="school_college">School/College</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_id_optional">Referral ID (optional)</string>
    <string name="gender_m_or_f">Gender (m or f)</string>
    <string name="register">Register</string>
    <string-array name="days_array">
        <item> None</item>
        <item> Day 1</item>
        <item> Day 2</item>
        <item> Day 3</item>
        <item> Day 1 and Day 2</item>
        <item> Day 2 and Day 3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backend_amp_web_developers"><![CDATA[Backend & Web Developers]]></string>
    <string name="ashwani_yadav">Ashwani Yadav</string>
    <string name="amartya_mondal">Amartya Mondal</string>
    <string name="app_developers">App Developers</string>
    <string name="amish_mittal">Amish Mittal</string>
    <string name="somenath_sarkar">Somenath Sarkar</string>
    <string name="ayush_shrivastava">Ayush Shrivastava</string>
    <string name="subhang_vasireddy">Subhang Vasireddy</string>
    <string name="kavya_goyal">Kavya Goyal</string>
    <string name="debarghya_maiti">Debarghya Maiti</string>
    <string name="priyanka_sachan">Priyanka Sachan</string>
    <string name="mehuli_pal">Mehuli Pal</string>
    <string name="vs_subhang">VS Subhang</string>
    <string name="img">img</string>
    <string name="no_account_yet">No Account Yet?</string>
    <string name="register_now">Register Now</string>
    <string name="email_not_verified">Email Not Verified?</string>
    <string name="resend_activation_link">Resend Activation Link</string>
    <string name="email">Email</string>
    <string name="anw">ANW</string>
    <string name="anwesha_id">Anwesha ID</string>
    <string name="logo">logo</string>
    <string name="gallery">Gallery</string>
    <string name="login">Login</string>
    <string name="pronite">Pronite</string>
    <string name="events">Events</string>

</resources>
